refactor: integrate AuthorMenu into CLIInputParser and related classes for improved author management